feat:artist, label search function add
