# public/swagger.json
@@ -1592,6 +1592,14 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "artist",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
 					}
 				]
 			}
@@ -1780,6 +1788,56 @@
 					{
 						"in": "path",
 						"name": "slug",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "skip",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/v1/albums/search": {
+			"get": {
+				"operationId": "GetSearchAlbums",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Album"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Album"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "keyword",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -2134,6 +2192,14 @@
 				"parameters": [
 					{
 						"in": "query",
+						"name": "pickType",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
 						"name": "skip",
 						"required": true,
 						"schema": {
@@ -2150,7 +2216,15 @@
 					},
 					{
 						"in": "query",
-						"name": "publisher",
+						"name": "publisherSlug",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "artistSlug",
 						"required": true,
 						"schema": {
 							"type": "string"
