# src/routes/track.router.ts
@@ -17,9 +17,12 @@ const router = express.Router();
 
 router.get("/", Validator(getAll, "query"), async (req, res) => {
   const controller = new TrackController();
+  //console.log(req.query);
+  const pickType = req.query.picktype.toString();
   const skip = req.query.skip.toString();
   const limit = req.query.limit.toString();
-  const publisher = req.query.publisher.toString();
+  const publisherSlug = req.query.publisherslug.toString();
+  const artistSlug = req.query.artistslug.toString();
   const title = req.query.title.toString();
   const genre = req.query.genre.toString();
   const bpmlow = req.query.bpmlow.toString();
@@ -28,9 +31,9 @@ router.get("/", Validator(getAll, "query"), async (req, res) => {
   const label = req.query.label.toString();
   const artist = req.query.artist.toString();
 
-  const response = await controller.getTracks(skip, limit, publisher, title, bpmlow, bpmhigh, key, genre, label, artist);
+  const response = await controller.getTracks(pickType, skip, limit, publisherSlug, artistSlug, title, bpmlow, bpmhigh, key, genre, label, artist);
   //return res.status(200).send(response);
-  return res.json({tracks: response, track_count: response.length});
+  return res.json({tracks: response, trackCount: response.length});
 });
 
 router.get("/search", Validator(search, "query"), async (req, res) => {
@@ -39,7 +42,7 @@ router.get("/search", Validator(search, "query"), async (req, res) => {
   const controller = new TrackController();
   const response = await controller.getSearchTracks(req.query.keyword.toString(), req.query.skip.toString(), req.query.limit.toString());
   //return res.status(201).send(response);
-  return res.json({tracks: response, track_count: response.length, search_mode_value});
+  return res.json({tracks: response, trackCount: response.length, search_mode_value});
 });
 
 router.get("/genre-tracks/:slug", Validator(getGenreTracks, "query"), async (req, res) => {
@@ -47,7 +50,7 @@ router.get("/genre-tracks/:slug", Validator(getGenreTracks, "query"), async (req
   const controller = new TrackController();
   const response = await controller.getGenreTracks(req.params.slug, req.query.skip.toString(), req.query.limit.toString());
   //return res.status(201).send(response);
-  return res.json({tracks: response, track_count: response.length});
+  return res.json({tracks: response, trackCount: response.length});
 });
 
 router.post("/uploadBulk", Validator(upload, "body"), async (req, res) => {
